--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "morgan": "^1.10.0",
-    "nanoid": "^5.0.7"
+    "nanoid": "^5.0.7",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
